/*
 * $Id: ChangeLog,v 1.4808 2006/02/09 14:20:54 gdrouillard Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-02-10 13:31 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    * Enhanced support of BYREF arguments

  * source/vm/errorapi.c
    ! Fixed internal error when C code calls the error system after a pending request from prior error.

2006-02-09 09:13 UTC-0500 Gerald Drouillard <gerald@drouillard.ca>
  * source/rtl/tbrowse.prg
    ! Fix for :setcolpos() changed line:
         if ! ::stable .AND. nColPos >= 1 .AND. nColPos <= ::nColumns
      to
         if ::lNeverDisplayed .OR. (! ::stable .AND. nColPos <= ::rightVisible .AND. nColPos >= ::leftVisible)
      as this shortcut would mess up the tbrowse if the colpos was set outside left and right visible columns.

2006-02-06 17:52 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbver.h
    * Refreshed

  /*
     Te-tagged CVS as Beta-1-60
   */

2006-02-07 14:20 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/console.c
    ! HB_FUNC( __EJECT )
      fix typo in previous change

2006-02-07 14:00 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * source/rtl/console.c
    ! HB_FUNC( __EJECT )
      change hb_fsWrite( .., "\x0C", 1) to hb_fsWrite( .., "\x0C\x0D", 2)
      thanks to David Corona

2006-02-06 16:12 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbver.h
    * Refreshed

  /*
     Te-tagged CVS as Beta-1-60
   */

2006-02-06 20:00 UTC-0300 Luiz Rafael Culik<luiz at xharbour.com.br>
  * source/rtl/hbsrlraw.c
    ! Minor fix when serializating numbers over 10 digits

2006-02-06 10:00 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * include/hbver.h
    * Refreshed

  /*
     tagged CVS as Beta-1.60
   */

2006-02-04 10:55 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c